src/objects/PE_Exception__c.object
<CustomObject>
    <description>Object to hold exceptions logged while processing the event. Used by the Apex PE Framework</description>
    <fields>
        <fullName>Error_Class__c</fullName>
        <label>Error Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>RecordId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PE Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Class__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Username__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>PE Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PE Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>